--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2020.12.5
 click==8.0.1
 -e git+https://github.com/Chaitanyadp/EmailService.git@329ce8dbe79c53fc525a1800674065a1d1016318#egg=emailservice
 Flask==2.0.1
+Flask-Cors==3.0.10
 Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.9
 itsdangerous==2.0.1
