--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-MySQLdb==0.2.0
 Flask-RESTful==0.3.9
+Gunicorn==20.0.4
 itsdangerous==2.0.1
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
